scripts/nullaway/annotator/url5492781e79_florianpilz_Concurrent_Hash_Collision_tgz-pJ8-main_MainJ8.txt
../annotator/url5492781e79_florianpilz_Concurrent_Hash_Collision_tgz-pJ8-main_MainJ8/src/main/Main.java:101: error: [NullAway] @NonNull static field skandium not initialized
	public static Skandium skandium;
	                       ^
    (see http://t.uber.com/nullaway )
../annotator/url5492781e79_florianpilz_Concurrent_Hash_Collision_tgz-pJ8-main_MainJ8/src/main/Main.java:215: error: [NullAway] dereferenced expression Main.hashmap.get(Main.byteToString(result.get(0).getHash())) is @Nullable
			System.out.println(s2.getSentence(Main.hashmap.get(Main.byteToString(result.get(0).getHash())).getBitmap()));
			                                                                                              ^
    (see http://t.uber.com/nullaway )
../annotator/url5492781e79_florianpilz_Concurrent_Hash_Collision_tgz-pJ8-main_MainJ8/src/main/Main.java:216: error: [NullAway] dereferenced expression Main.hashmap.get(Main.byteToString(result.get(0).getHash())) is @Nullable
			System.out.println(Main.hashmap.get(Main.byteToString(result.get(0).getHash())).getBitmap());
			                                                                               ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
3 errors
